# 3d-space-shooter

./: README.md  pyproject.toml  requirements.txt
src/game/: config.py  main.py
src/game/engine/: camera.py  physics.py  renderer.py
src/game/entities/: enemy.py  entity.py  life_sphere.py  meteorite.py  player.py  projectile.py
src/game/ui/: hud.py
src/game/utils/: math_utils.py  models.py
src/tests/: test_game.py
